--- a/vignettes/useMagellanForDevs.Rmd
+++ b/vignettes/useMagellanForDevs.Rmd
@@ -31,7 +31,40 @@ BiocStyle::markdown()
 
 
 
-## Package directory
+# Overview
+
+
+The code of `Magellan` has two main objectives:
+
+* be generic to handle several different types of datasets,
+* be sufficiently xxx to include most of the xxx so as to minimize the code to
+write for process modules. Thus, process modules, in a sense, only contains the ui elements for
+the process and the logics of the modules.
+
+It facilitates the work for writing process modules but has some contraints such as the naming 
+conventions which are important. To allow writing less 'dev' code, the core of `Magellan` is mostly based
+on function names which are dynamically built from the module processes. So, respect the naming
+conventions is fundamental.
+
+The package `Magellan` is a generic package that offers a graphical workflow manager, based on
+Shiny modules.
+It is very generic and can handle different types of objects but they must be of type `list` (see \ref{objecttypes}).
+
+
+
+# Type of objects 
+
+`Magellan` can handle different types (classes) of objects but all based on the type `list`.
+To manipulate such objects, it use most of the R functions like `[]`, `[[]]`, etc...
+As it is generic, all types of objects used by the modules must work with these basic functions.
+
+However, two functions cannot be really generic: xxx and xxx(). They are very simple (essentially they are wrappers
+for existing functions) but necessary. These functions are defined as abstract in `Magellan`.
+For the examples, `Magellan` implements those functions for the simple class `list`. The dev who want to write its own 
+process module have to write the code of these two functions for the class of its object.
+
+
+## The 'inst/scripts' directory
 
 
 The 'R' directory contains source code files. The files prefixed by 'mod_' contain a shiny module.
@@ -53,9 +86,6 @@ The directory 'module_examples' contain xxx
 
 
 
-# Naming conventions
-
-
 # Intro
 
 
@@ -75,15 +105,93 @@ SO as to facilitate both the development of a new module and the maintenance,
 we have volontary want to have a quite constraint code and Module template. It guarantees xxx
 
 
-## External R package with modules
+# How `Magellan` works
 
-`Magellan` cannot be run alone, it is always run with a package which contains the informations about the steps to manage.
+## Overview
+
+`Magellan` cannot be run alone, it is always run with a package which contains the information about the steps to manage.
 
 
 
 ```{r 'globalArch', results='markup', fig.cap="Global architecture of connectivity between Magellan, Shiny and packages containing the code for modules.", echo=FALSE, out.width='100%', fig.align='center', fig.wide = TRUE}
 knitr::include_graphics("./figs/globalArch.png", error = FALSE)
 ```
+
+The final shiny app is showed by Magellan, it is its functions that are called in the shiny app.
+Inside Magellan, three main operations are run:
+
+* Magellan needs to read the configuration of the module to adjust some of its features (timelines, variables): those information are stored in the code of the process. The first operation of Magellan is to build the name of the source file for the module and to load the source code. More specially, two infos are important:
+  * the configuration of the process,
+  * the list of UIs of the steps.
+* This loading is accompanied by the insertion of some necessary code in the module. Certain generic functions are stored in Magellan to let the external package as light and easy to understand as possible. While loading the source code, those functions are inserted inside
+* xxx
+
+
+
+## Launch a workflow
+
+As Magellan is a Shiny app, to launch the app, a few lines of code are necessary. Here, are th minimum code to launch a worklfow called Proc1 which belongs to a composed workflow called 'PipeA'. 
+
+Here is explained a minimal shiny app (code in '/inst/scripts/min_simple_workflow_app_example.R'). Here are the comments
+
+Launch the packages
+
+
+```{r minshinyappexample_launchpackages,attr.source = ".numberLines", eval = FALSE}
+library(Magellan)
+
+f <- system.file("scripts/module_examples", 
+                 "example_module_PipelineA_Process1.R", 
+                 package="Magellan")
+source(file(f), local=TRUE)$value
+
+ui <- fluidPage(
+  mod_navigation_ui('PipelineA_Process1')
+  
+server <- function(input, output){
+  data(feat1, package='Magellan')
+  rv <- reactiveValues(
+    dataIn = feat1,
+    dataOut = NULL
+  )
+  
+  observe({
+    rv$dataOut <- mod_navigation_server(id = 'PipelineA_Process1',
+                                        nav.mode = 'process',
+                                        dataIn = reactive({rv$dataIn})
+                                        )
+    }, priority=1000)
+}
+
+shinyApp(ui, server)
+
+```
+
+
+
+
+As we can see, launching a shiny app which shows a process module pass by `Magellan` which acts as a bridge package: the ui() and server() functions of the app only call `Magellan` functions.
+
+There is here a first example of the imortance of names convention. If we focus on the id of these functions, one can see that it is composed of two concatenated strings : the name of the parent and the name of the process.
+This id is splitted  and xxxx. This string is precisely the name of the procs module source code file in the external package (but prefixed by 'mod_')
+
+
+A generic script example is here: '/inst/scripts/min_simple_workflow_app.R'
+
+
+
+## Naming conventions for modules
+
+As `Magellan` heavily uses dynamically built function names (to be generic), the naming of scripts and variables is fundamental.
+
+
+A module is well-defined by its `config` variable which contains its name and the name of the parent workflow to which it belongs to.
+In this document, 'mod_name' will refer to the name of the module (i.e. Process1 as in example) and 'parent_name' to the name of its parent 
+(i.e. PipelineA as in example).
+
+For more details on how to name files and variables in the process modules, please read the manual 'xxx'
+
+
 
 
 ## Requirments
@@ -124,8 +232,8 @@ The name of these functions is very important because Magellan call those functi
 Chacune des deux fonctions contient quatre mots-clés séparés par '_':
 
 * `mod`:mot-clé fixe qui précise que la fonction est celle d'un module,
-* `pipeline`: le nom du pipeline auquel le process appartient,
-* `process`: le nom du process lui-même,
+* `pipeline_name`: le nom du pipeline auquel le process appartient,
+* `process_name`: le nom du process lui-même,
 * `ui` ou `server` selon qu'il s'agit de la fonction ui ou server.
 
 Par example, la fonction `mod_PipelineA_Process4_server()` est le nom du serveur pour le process 4 du pipeline A.
@@ -134,187 +242,52 @@ Par example, la fonction `mod_PipelineA_Process4_server()` est le nom du serveur
 
 ## Timeline styles
 
-### Horizontal timeline
+The timelines are coded as modules. They are not exported as only mod_navigation_server use them. However, it may be interesting to the developer to know a little about them if he want to customize or develop another timeline.
 
 
-### Vertical timeline
-
-
-
-## Launch a workflow
-
-As Magellan is a Shiny app, to launch the app, a few lines of code are necessary. Here, are th minimum code to launch a worklfow called Proc1 which belongs to a composed workflow called 'PipeA'. 
-
-Here is explained a minimal shiny app (code in '/inst/scripts/min_simple_workflow_app_example.R'). Here are the comments
-
-Launch the packages
-
-
-```{r minshinyappexample_launchpackages,attr.source = ".numberLines", eval = FALSE}
-library(Magellan)
-
-f <- system.file("scripts/module_examples", "example_module_PipelineA_Process1.R", package="Magellan")
-source(file(f), local=TRUE)$value
-```
-
-
-Write the ui() function
-
-```{r minshinyappexample_ui,attr.source = ".numberLines", eval = FALSE}
-ui <- fluidPage(
-  mod_navigation_ui('PipelineA_Process1')
-)
-```
-
-
-Write the server() function
-```{r minshinyappexample_server, attr.source = ".numberLines", eval = FALSE, include=TRUE}
-server <- function(input, output){
-  data(feat1, package='Magellan')
-  rv <- reactiveValues(
-    dataIn = feat1,
-    dataOut = NULL
-  )
-  
-  observe({
-    rv$dataOut <- mod_navigation_server(id = 'PipelineA_Process1',
-                                        nav.mode = 'process',
-                                        dataIn = reactive({rv$dataIn})
-                                        )
-    }, priority=1000)
-}
-```
-
-Finally, launch the app
-
-```{r minshinyappexample_app,attr.source = ".numberLines", eval = FALSE}
-shinyApp(ui, server)
-```
+The look & feel if managed by the ui() function while the logics is managed by the module server() function.
+This server ensures that the different states (enabled/disabled, color and style, display of the cursor for the active step) of each item in the timeline works well
 
 
 
-
-A generic script example is here: '/inst/scripts/min_simple_workflow_app.R'
-
+Despite that hose information are documented in the reference manual of Magellan but it allows to better understand here how it works.
 
 
-## `ui()` function
+The server() function is based on the same fundamental code:
 
-Normalement, la fonction ui() contient le code pour les interfacs graphiques. Ces interfaces sont gérées par Magellan et leur code réside dans la fonction serveur. En effet, il y a besoin qu'elles soient toutes dynamiques et de ce fait, on utilise les fonctions renderUI() et uiOutput() mais dans la partie serveur de sorte qu'on puisse les appeler dynamiquement.
-
-
-## `server()` function
-
-
-### Architecture overview
-
-La fonction serveur utilise l'architecture proposée par Shiny pour écrire un module.
-
-```{r serverArch}
-mod_PipeA_Proc3_server <- function(id,
-                                   dataIn = reactive({NULL}),
-                                   steps.enabled = reactive({NULL}),
-                                   remoteReset = reactive({FALSE}),
-                                   currentPos = reactive({1})
-                                   ){
-  
- # Put here static code that is not affected by the reactive programming
-  widgets.default.values <- list()
-  
-  
-  config <- list(name = NULL,
-                 parent = NULL,
-                 seps = NULL,
-                 mandatory = NULL)
+```{r serverTL, eval=FALSE, echo=TRUE}
+mod_timeline_v_server <- function(id, 
+                               config, 
+                               status, 
+                               position, 
+                               enabled) {
 
   moduleServer(id, function(input, output, session) {
     ns <- session$ns
-    # Insert necessary code which is hosted by Magellan
-    # DO NOT MODITY THIS LINE
-    eval(parse(text = ModuleCoreCode(widgets = names(widgets.default.values),
-                                     steps = config$steps )))
-
     
-    # Definition of the ui for each steps
-    # Write here your own code
-    
-    
-    # Insert necessary code which is hosted by Magellan
-    # DO NOT MODITY THIS LINE
-    eval(parse(text = Module_Return_Func()))
-  })
+    UpdateTags <- reactive({...})
+    output$show_v_TL <- renderUI({...})
+    })
 }
-
 ```
 
+The parameters of the server are the same for both vertical and horizontal timelines:
 
-The input parameters of the server function are:
-
-* `id`: The name of the server,
-* `dataIn`: The object given as input to the process,
-* `steps.enabled`: A vector of boolean which has the same length of the steps
-of the pipeline. This information is used to enable/disable the widgets. It is not
-a communication variable between the caller and this module, thus there is no
-corresponding output variable,
-* `remoteReset`: It is a remote command to reset the module. A boolean that
-indicates is the pipeline has been reseted by a program of higher level
-Basically, it is the program which has called this module.
-
-Note: The last three parameters are reactive because they are frequently updated during the execution of `Magellan`.
-
-The function `mod_PipelineA_Process3_server()` is the high-level function which acts as a wrapper for the server function. In this part, on store the definition of non-reactive variables (like global static variables).
-In a process, one can find:
-
-* The definition of the configuration data of the process (see below for more details),
-* The definition of the default values for the widgets
-
-The function `moduleServer()` is the real server function for the module. It contains the following elements:
-
-* Declaration of `rv.widgets` variables for widgets, This part must be modified only to write the list of widgets.
-* Declaration of `rv` reactive variables which contains the value of the input parameters. THIS PART MUST NOT BE MODIFIED
-* Declaration of the `dataOut` reactive values. THIS PART MUST NOT BE MODIFIED
-* Definition of the listener functions for the two parameters `steps.enabled()` and `remoteReset()`. THIS PART MUST NOT BE MODIFIED.
-* Code for each step (see below),
-* Return value of the process. THIS PART MUST NOT BE MODIFIED,
-    
-
-## Definition of the process (`config` variable)
-
-The `config` variable contains the information about the process. It is read by the pipeline which calls this process. The names of the 4 items must not be modified but the developper can customize their value to describe the new process
-
-* `name`: Name of the process,
-* `parent`: Name of the pipeline it belongs to,
-* `steps`: List of all steps of the process, Please note that the first step is always named 'Description'.
-* `mandatory`: A vector of boolean indicating if the steps are mandatory or not. Please note that the first step is mandatory.
+* id: the `id` of the server (same as the  `id` of the ui() function),
+* config: A `list` (not a `reactiveList`) containing the same elements as the 
+process module.
+* status: A `reactive vector` which contain the status (validated, skipped or 
+undone) of each step of the process module. Its length is equal to the number 
+of steps.
+* position: A `reactive integer` that reflects the position of the current 
+(active) step.
+* enabled: A `reactive vector` of length the number of steps and which indicate
+if the step is enabled or disabled.
 
 
-# Writing code for a step
-
-The steps of a process are all built on the same schema:
-
-* ObserveEvent of the widgets
-* A global `renderUI()` function that manage the ui (and further renderUI()) for the step. The `id` of this function
-must be equal to the name of the corresponding step.
-* Other `renderUI()` functions that define some widgets
-* `observeEvent()` for the validation button (last step). This part must not be modified
-* Code specific to the process.
-
-## Important note
-
-When a step is enabled/disabled, all its widgets are also. In order to have reliability, this state is managed by a 
-variable for each step (a given element in the `steps.status` vector, input parameter).
-Thus, it is mandatory that each widget have to be wrapped into an if/else statement in which the condition
-
-# A tool to create a new process
-
-A script (``) has been developed to facilitate the development of a process. It consists in a shiny app.
-
-This app proposes forms to configure certain aspects of the process. At the end of the setup, the user validate its configuration and a R script is written which contains the code for the module. The part which can be modified to customize the module are showed to the user. The, he has to customize this script.
-
-The app can be run in two several modes whether the level of finition of the process code:
-
-* A simple mode which permits to configure a lot of aspects of the module. It guides the developer in a lot of details but is not very versatile (the user must know exactly what he want to do),
-* An expert mode which proposes the minimal configuration for the process
+The reactive function `UpdateTags()` updates a vector containing the tags 
+inserted in the css-style
 
 
-# Composed workflow
+
+
